tests/baselines/reference/privateNameJsx.errors.txt
privateNameJsx.tsx(2,19): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
privateNameJsx.tsx(4,27): error TS1003: Identifier expected.


==== privateNameJsx.tsx (2 errors) ====
    class Test {
        #prop = () => <div />;
                      ~~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
        render() {
            return <this.#prop />;
                              
!!! error TS1003: Identifier expected.
        }
    }
    
    